# tarea2-agustinlamenza

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _quarto.yml  enunciado.md  index.html  index.qmd  pyproject.toml
_site/: about.html  index.html
_site/code/: analysis.html
code/: 01_scraping.py  02_analysis.qmd  analysis.html  analysis.qmd
data/: lyrics.tsv  songs.tsv
docs/: search.json
docs/code/: analysis.html
reports/: 01_analysis.qmd
scripts/: 02_packages.R
