[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["alamenza <agustin.lamenza@mercadolibre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
spotipy = "^2.24.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
