[tool.poetry]
name = "tarea2-agustinlamenza"
version = "0.1.0"
description = ""
authors = ["alamenza <agustinlamenza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
spotipy = "^2.24.0"
unidecode = "^1.3.8"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
